--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,36 @@
-# Project exclude paths
+## Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+
+*.app Project exclude paths
 /cmake-build-debug/
 /cmake-build-release/
 
