--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,9 +128,9 @@ foreach(GLSL ${GLSL_SOURCE_FILES})
     set(SPIRV "${PROJECT_SOURCE_DIR}/Nasha/src/Nasha/shaders/${FILE_NAME}.spv")
     add_custom_command(
             OUTPUT ${SPIRV}
-            COMMAND ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}
+            COMMAND ${GLSL_VALIDATOR} ${GLSL} -o ${SPIRV}
             DEPENDS ${GLSL})
-    message(STATUS "Ran Command: ${GLSL_VALIDATOR} -V ${GLSL} -o ${SPIRV}")
+    message(STATUS "Ran Command: ${GLSL_VALIDATOR} ${GLSL} -o ${SPIRV}")
     list(APPEND SPIRV_BINARY_FILES ${SPIRV})
 endforeach(GLSL)
 
